1. Collection API Улучшения[#92757]