@@ -2,10 +2,7 @@ package ru.job4j.list;
 
 import org.junit.Test;
 
-import java.util.List;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
+import java.util.*;
 
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
@@ -25,18 +22,30 @@ public class UserConvertTest {
     @Test
     public void whenListFrom3UsersThenMap() {
         UserConvert userConvert = new UserConvert();
-        List<User> lists = new ArrayList<>();
-        User user1 = new User(10, "Olga", "London");
-        User user2 = new User(12, "Nik", "Moscow");
-        User user3 = new User(3, "Bob", "New York");
-        lists.add(user1);
-        lists.add(user2);
-        lists.add(user3);
+        //List<User> lists = new ArrayList<>();
+        //User user1 = new User(10, "Olga", "London");
+        //User user2 = new User(12, "Nik", "Moscow");
+        //User user3 = new User(3, "Bob", "New York");
+        //lists.add(user1);
+        //lists.add(user2);
+        //lists.add(user3);
+        List<User> lists = List.of(
+                new User(10, "Olga", "London"),
+                new User(12, "Nik", "Moscow"),
+                new User(3, "Bob", "New York")
+        );
         HashMap<Integer, User> result = userConvert.process(lists);
-        HashMap<Integer, User> expect = new HashMap<>();
-        expect.put(10, lists.get(0));
-        expect.put(12, lists.get(1));
-        expect.put(3, user3);
+        //HashMap<Integer, User> expect = new HashMap<>();
+        //expect.put(10, lists.get(0));
+        //expect.put(12, lists.get(1));
+        //expect.put(3, user3);
+        HashMap<Integer, User> expect = new HashMap<>(
+                Map.of(
+                        10, lists.get(0),
+                        12, lists.get(1),
+                        3, lists.get(2)
+                )
+        );
         assertThat(result, is(expect));
     }
 
@@ -46,13 +55,19 @@ public class UserConvertTest {
     @Test
     public void whenListFrom2UsersThenMap() {
         UserConvert userConvert = new UserConvert();
-        List<User> lists = new ArrayList<>();
         User user1 = new User(10, "Olga", "London");
         User user2 = new User(12, "Nik", "Moscow");
-        HashMap<Integer, User> result = userConvert.process(Arrays.asList(user1, user2));
-        HashMap<Integer, User> expect = new HashMap<>();
-        expect.put(10, user1);
-        expect.put(12, user2);
+        List<User> lists = List.of(
+                user1,
+                user2
+        );
+        HashMap<Integer, User> result = userConvert.process(lists);
+        HashMap<Integer, User> expect = new HashMap<>(
+                Map.of(
+                        10, user1,
+                        12, user2
+                )
+        );
         assertThat(result, is(expect));
     }
 
@@ -62,11 +77,10 @@ public class UserConvertTest {
     @Test
     public void whenListFrom2UsersThenMapUserWithId12GetCity() {
         UserConvert userConvert = new UserConvert();
-        List<User> lists = new ArrayList<>();
-        User user1 = new User(10, "Olga", "London");
-        User user2 = new User(12, "Nik", "Moscow");
-        lists.add(user1);
-        lists.add(user2);
+        List<User> lists = List.of(
+                new User(10, "Olga", "London"),
+                new User(12, "Nik", "Moscow")
+        );
         HashMap<Integer, User> map = userConvert.process(lists);
         String result = map.get(12).getCity();
         assertThat(result, is("Moscow"));
